--- a/index.html
+++ b/index.html
@@ -5,30 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="stye.css">
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container-profile">
+    <div class="profile-avatar">
+      <img src="/assets/images/avatar-jessica.jpeg"alt="profile-avatar"/>
+    </div>
+    <div class="profile-title">
+      <h1>Jessica Randall</h1>
+      <h2>London, United Kingdom</h2>
+    </div>
+    <p>"Front-end developer and avid reader."</p>
+    <div class="social-links-wrapper">
+      <div class="links">
+        <p>GitHub</p>
+      </div>
+      <div class="links">
+        <p>Frontend Mentor</p>
+      </div>
+      <div class="links">
+        <p>LinkedIn</p>
+      </div>
+      <div class="links">
+        <p>Twitter</p>
+      </div>
+      <div class="links">
+        <p>Instagram</p>
+      </div>
+    </div>
+    
   </div>
+  
+  
+  
 </body>
 </html>
