--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container-profile">
     <div class="profile-avatar">
-      <img src="/assets/images/avatar-jessica.jpeg"alt="profile-avatar"/>
+      <img src="./assets/images/avatar-jessica.jpeg"alt="profile-avatar"/>
     </div>
     <div class="profile-title">
       <h1>Jessica Randall</h1>
